--- a/default.project.json
+++ b/default.project.json
@@ -4,6 +4,7 @@
     "$className": "DataModel",
 
     "ReplicatedStorage": {
+      "$path": "src/ReplicatedStorage",
       "Packages": {
         "$path": "libraries"
       }
